fix(layout): overflow footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,3 +23,7 @@ a.link-external {
     box-shadow: 0 0 0 3px rgb(var(--v-theme-primary)); /* Add a focus ring for accessibility */
   }
 }
+
+.app-container {
+  max-width: 1440px !important;
+}
